--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,10 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+//plugins {
+//    id 'com.android.application' version '7.4.2' apply false
+//    id 'com.android.library' version '7.4.2' apply false
+//    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+//    id("com.google.dagger.hilt.android") version "2.44" apply false
+//}
+
 buildscript {
     repositories {
         google()
@@ -8,10 +14,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "com.android.tools.build:gradle-api:7.2.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
 
-        classpath('com.google.dagger:hilt-android-gradle-plugin:2.42')
+        classpath('com.google.dagger:hilt-android-gradle-plugin:2.44')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
